Fix timeline dot alignment, mobile menu overflow, and brand detail page badge overlap

--- a/src/components/HomeSections/Timeline.module.css
+++ b/src/components/HomeSections/Timeline.module.css
@@ -203,7 +203,7 @@
   }
 
   .nodeWrapper {
-    left: 40px;
+    left: -40px;
     top: 50px;
     transform: translate(-50%, -50%);
   }
